--- a/windows/NTMakefile.config
+++ b/windows/NTMakefile.config
@@ -16,7 +16,7 @@
 !  include <windows\NTMakefile.version>
 !endif
 
-!if [ $(PERL) $(SRC)\cf\w32-detect-vc-version.pl $(CC) ]==16
+!if [ $(PERL) $(SRC)\cf\w32-detect-vc-version.pl $(CC) ]>=16
 HAVE_STDINT_H=1
 HAVE_INT64_T=1
 !endif
