--- a/UserMacros.props
+++ b/UserMacros.props
@@ -14,6 +14,7 @@
     <PERL>perl.exe</PERL>
     <PYTHON>python.exe</PYTHON>
     <ExecutablePath>$(ExecutablePath);d:\cygwin64\bin;$(WIX)bin</ExecutablePath>
+    <RelDir>$([MSBuild]::MakeRelative('$(SolutionDir)', '$(MSBuildProjectDirectory)'))</RelDir>
   </PropertyGroup>
   <PropertyGroup />
   <ItemDefinitionGroup>
