--- a/asn1_compile.vcxproj
+++ b/asn1_compile.vcxproj
@@ -124,23 +124,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>out\dest_$(CPU)\</OutDir>
-    <IntDir>out\obj_$(CPU)\lib\asn1\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\asn1\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>out\dest_$(CPU)\</OutDir>
-    <IntDir>out\obj_$(CPU)\lib\asn1\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\asn1\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>out\dest_$(CPU)\</OutDir>
-    <IntDir>out\obj_$(CPU)\lib\asn1\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\asn1\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>out\dest_$(CPU)\</OutDir>
-    <IntDir>out\obj_$(CPU)\lib\asn1\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\asn1\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
