--- a/libheimdal.vcxproj
+++ b/libheimdal.vcxproj
@@ -121,44 +121,44 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>out\dest_$(CPU)\</OutDir>
-    <IntDir>out\obj_$(CPU)\lib\heimdal\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\heimdal\</IntDir>
     <TargetName>heimdal</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-Static|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>out\dest_$(CPU)\</OutDir>
-    <IntDir>out\obj_$(CPU)\lib\heimdal\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\heimdal\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>out\dest_$(CPU)\</OutDir>
-    <IntDir>out\obj_$(CPU)\lib\heimdal\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\heimdal\</IntDir>
     <TargetName>heimdal</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-Static|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>out\dest_$(CPU)\</OutDir>
-    <IntDir>out\obj_$(CPU)\lib\heimdal\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\heimdal\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>out\dest_$(CPU)\</OutDir>
-    <IntDir>out\obj_$(CPU)\lib\heimdal\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\heimdal\</IntDir>
     <TargetName>heimdal</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-Static|x64'">
-    <OutDir>out\dest_$(CPU)\</OutDir>
-    <IntDir>out\obj_$(CPU)\lib\heimdal\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\heimdal\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>out\dest_$(CPU)\</OutDir>
-    <IntDir>out\obj_$(CPU)\lib\heimdal\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\heimdal\</IntDir>
     <TargetName>heimdal</TargetName>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-Static|x64'">
-    <OutDir>out\dest_$(CPU)\</OutDir>
-    <IntDir>out\obj_$(CPU)\lib\heimdal\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\heimdal\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
