--- a/libkrb5.vcxproj
+++ b/libkrb5.vcxproj
@@ -225,7 +225,7 @@
     <ProjectGuid>{4ED22415-CCC6-4D2C-8F5F-D437B88040BB}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>libkrb5</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>7.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -279,23 +279,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IntDir>out\obj_$(CPU)\lib\krb5\</IntDir>
-    <OutDir>out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\krb5\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IntDir>out\obj_$(CPU)\lib\krb5\</IntDir>
-    <OutDir>out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\krb5\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IntDir>out\obj_$(CPU)\lib\krb5\</IntDir>
-    <OutDir>out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\krb5\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IntDir>out\obj_$(CPU)\lib\krb5\</IntDir>
-    <OutDir>out\dest_$(CPU)\</OutDir>
+    <IntDir>$(SolutionDir)out\obj_$(CPU)\lib\krb5\</IntDir>
+    <OutDir>$(SolutionDir)out\dest_$(CPU)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
